crates/tree-sitter-stan/grammars/stan/grammar.js
        program: $ => seq(
            optional($.functions),
            optional($.data),
            optional($.transformed_data),
            optional($.parameters),
            optional($.transformed_parameters),
            optional($.model),
            optional($.generated_quantities),
        ),

        functions: $ => seq(
            'functions',
            '{',
            repeat($.function_definition),
            '}',
        ),

        data: $ => seq(
            'data',
            '{',
            repeat($.top_var_decl_no_assign),
            '}',
        ),

        parameters: $ => seq(
            'parameters',
            '{',
            repeat($.top_var_decl_no_assign),
            '}',
        ),

        model: $ => prec(1, seq(
            'model',
            '{',
            repeat($._vardecl_or_statement),
            '}',
        )),

        var_decl: $ => decl($, $._sized_higher_type, $._expression),
        top_var_decl_no_assign: $ => choice(decl($, $._topvar_higher_type, "<<<UNREACHABLE TOKEN>>>"), $.empty_statement),

        _vardecl_or_statement: $ => choice(
            $._statement,
            $.var_decl
        ),
        function_definition: $ => seq(
            $.return_type,
            $.function_declarator,
            field("body", $._statement),
        ),

        function_declarator: $ => prec(1, seq(
            field("name", $.identifier),
            $.parameter_list,
        )),

        parameter_list: $ => prec.dynamic(1, seq(
            '(',
            commaSep($.parameter_declaration),
            ')',
        )),

        parameter_declaration: $ => seq(
            optional('data'),
            $.unsized_type,
            field("parameter", $.identifier),
        ),

        return_type: $ => choice(
            'void',
            $.unsized_type,
        ),

        unsized_type: $ => choice(
            seq("array", $.unsized_dims, $.basic_type),
            seq("array", $.unsized_dims, $.unsized_tuple_type),
            $.basic_type, $.unsized_tuple_type),

        unsized_tuple_type: $ => seq(
            'tuple',
            '(',
            tupleElements($.unsized_type),
            ')',
        ),

        unsized_dims: $ => seq(
            '[',
            repeat(','),
            ']',
        ),

        sized_basic_type: $ => prec.dynamic(1, choice(
            'int',
            'real',
            'complex',
            seq('vector', '[', $._expression, ']'),
            seq('row_vector', '[', $._expression, ']'),
            seq('matrix', '[', $._expression, ',', $._expression, ']'),
            seq('complex_vector', '[', $._expression, ']'),
            seq('complex_row_vector', '[', $._expression, ']'),
            seq('complex_matrix', '[', $._expression, ',', $._expression, ']'),
        )),

        // unfortunate duplication with topvar types
        _sized_higher_type: $ => choice(
            $._sized_array_type,
            $.sized_tuple_type,
            $.sized_basic_type
        ),

        sized_tuple_type: $ => seq(
            'tuple',
            '(',
            tupleElements($._sized_higher_type),
            ')',
        ),

        /* eslint-disable no-unused-vars */
        basic_type: $ => prec.dynamic(1, choice(
            'int',
            'real',
            'complex',
            'vector',
            'row_vector',
            'matrix',
            'complex_vector',
            'complex_row_vector',
            'complex_matrix',
        )),
        /* eslint-enable no-unused-vars */



        top_var_type: $ => choice(
            $.int_type,
            $.real_type,
            $.complex_type,
            $.vector_type,
            $.ordered_type,
            $.positive_ordered_type,
            $.simplex_type,
            $.unit_vector_type,
            $.sum_to_zero_vector_type,
            $.sum_to_zero_matrix_type,
            $.row_vector_type,
            $.matrix_type,
            $.complex_vector_type,
            $.complex_row_vector_type,
            $.complex_matrix_type,
            $.cholesky_factor_cov_type,
            $.cholesky_factor_corr_type,
            $.cov_matrix_type,
            $.corr_matrix_type,
            $.row_stochastic_matrix_type,
            $.column_stochastic_matrix_type,
        ),

        _topvar_higher_type: $ => choice(
            $._topvar_array_type,
            $.topvar_tuple_type,
            $.top_var_type
        ),

        topvar_tuple_type: $ => seq(
            'tuple',
            '(',
            tupleElements($._topvar_higher_type),
            ')',
        ),

        arr_dims: $ => seq(
            'array',
            '[',
            commaSep($._expression),
            ']',
        ),

        int_type: $ => seq(
            'int',
            optional($._range_constraint),
        ),

        real_type: $ => seq(
            'real',
            optional($.type_constraint),
        ),

        ordered_type: $ => seq(
            'ordered',
            '[',
            $._expression,
            ']',
        ),

        simplex_type: $ => seq(
            'simplex',
            '[',
            $._expression,
            ']',
        ),

        type_constraint: $ => prec(PREC.RANGE,
            choice(
                $._range_constraint,
                seq("<", $.offset_mult, ">"
                )
            )
        ),

        // this parses differently than Stan. Stan does not allow
        // ANY <> expressions inside the
        _range_constraint: $ => prec(PREC.RANGE, choice(
            $.range_lower,
            $.range_upper,
            $.range_lower_upper,
            $.range_upper_lower,
        )),

        /* eslint-enable no-unused-vars */

        range_lower: $ => prec(PREC.RANGE, seq(
            '<',
            'lower',
            '=',
            $._range_expression,
            '>',
        )),

        identifier: $ => /[A-Za-z][A-Za-z0-9_]*/,
        /* eslint-enable no-unused-vars */

        // Expressions
        _expression: $ => choice(
            $._common_expression,
            $.conditional_expression,
            $.infix_op_expression,
            $.prefix_op_expression,
            $.postfix_op_expression,
        ),

        // in order to deal with ambiguity of <> range expressions
        // cannot directly include logical infix operators.
        _range_expression: $ => choice(
            $._common_expression,
            alias($.infix_op_range_expression, $.infix_op_expression),
            alias($.prefix_op_range_expression, $.prefix_op_expression),
            alias($.postfix_op_range_expression, $.postfix_op_expression),
        ),

        // range constraints only allow a subset of expressions
        _common_expression: $ => choice(
            $.integer_literal,
            $.real_literal,
            $.imag_literal,
            $.variable_expression,
            $.array_expression,
            $.tuple_expression,
            $.vector_expression,
            $.function_expression,
            $.distr_expression,
            $.tuple_projection,
            $.indexed_expression,
            $.parenthized_expression,
        ),

        variable_expression: $ => $.identifier,

        array_expression: $ => seq(
            '{',
            commaSep($._expression),
            '}',
        ),

        tuple_expression: $ => seq(
            '(',
            tupleElements($._expression),
            ')',
        ),

        tuple_projection: $ => seq(
            $._common_expression, '.',
            field("idx", token.immediate(/[0-9]+/))
        ),

        vector_expression: $ => prec(PREC.BRACKET, seq(
            '[',
            commaSep($._expression),
            ']',
        )),

        // operator expressions outside of range constraints
        indexed_expression: $ => prec.left(PREC.INDEX, seq(
            $._common_expression,
            '[',
            optional($.index),
            repeat(seq(',', optional($.index))),
            ']',
        )),

        // expressions inside of range constraints
        function_expression: $ => seq(
            field("name", $.identifier),
            $.argument_list,
        ),

        argument_list: $ => prec.dynamic(1, seq(
            '(',
            commaSep($._expression),
            ')',
        )),

        index: $ => choice(
            $._expression,
            $.colon_expression,
            $.left_colon_expression,
            $.right_colon_expression,
            ":",
        ),

        integer_literal: $ => /[0-9]+(_[0-9]+)*/,
        /* eslint-enable no-unused-vars */

        // can't use token because of https://github.com/tree-sitter/tree-sitter/issues/449
        real_literal: $ => choice(
            seq($.integer_literal, token.immediate("."), optional($.integer_literal), optional($.exp_literal)),
            seq(".", $.integer_literal, optional($.exp_literal)),
            seq($.integer_literal, $.exp_literal),
        ),

        _statement: $ => choice(
            $.empty_statement,
            $.assignment_statement,
            $.sampling_statement,
            $.function_statement,
            $.log_prob_statement,
            $.target_statement,
            $.jacobian_statement,
            $.break_statement,
            $.continue_statement,
            $.print_statement,
            $.reject_statement,
            $.fatal_error_statement,
            $.return_statement,
            $.if_statement,
            $.while_statement,
            $.for_statement,
            $.block_statement,
            $.profile_statement,
        ),

        /* eslint-disable no-unused-vars */
        empty_statement: $ => ';',
        /* eslint-enable no-unused-vars */

        assignment_statement: $ => prec(PREC.ASSIGN, seq(
            $.lhs,
            $.assignment_op,
            $._expression,
            ';',
        )),

        lhs: $ => choice(
            $.variable_expression,
            $.indexed_lhs,
            $.tuple_proj_lhs,
            $.tuple_pack_lhs,
        ),

        indexed_lhs: $ => prec.left(PREC.INDEX, seq(
            $.lhs,
            '[',
            optional($.index),
            repeat(seq(',', optional($.index))),
            ']',
        )),


        tuple_pack_lhs: $ => seq(
            '(', commaSep1($.lhs), ')'
        ),

        tuple_proj_lhs: $ => seq(
            $.lhs,
            '.',
            field("idx",
                token.immediate(/[0-9]+/)),
        ),

        /* eslint-disable no-unused-vars */
        assignment_op: $ => choice(
            '=',
            '+=',
            '-=',
            '*=',
            '/=',
            '.*=',
            './=',
        ),
        /* eslint-enable no-unused-vars */

        target_statement: $ => seq(
            'target',
            '+=',
            $._expression,
            ';',
        ),

        print_statement: $ => seq(
            'print',
            '(',
            commaSep(choice($._expression, $.string_literal)),
            ')',
            ';',
        ),

        // currently nested quotes not allowed
        /* eslint-disable no-unused-vars */
        block_statement: $ => seq(
            '{',
            repeat($._vardecl_or_statement),
            '}',
        ),

        comment: $ => token(choice(
            seq('//', /.*/),
            // http://stackoverflow.com/questions/13014947/regex-to-match-a-c-style-multiline-comment/36328890#36328890
            seq(
                '/*',
                /[^*]*\*+([^/*][^*]*\*+)*/,
                '/',
            ),
        )),
        /* eslint-enable no-unused-vars */

    },
});
